<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:background="@color/background_dark"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <ScrollView 
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        
        <LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:orientation="vertical" >
    
    
    <TextView
        android:id="@+id/title"
        android:layout_below="@+id/button"
        android:text="@string/pref_account"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp" />
    
    <View 
        android:id="@+id/sep1"
		android:layout_width="fill_parent"
		android:layout_height="2dp"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:background="@android:color/white"
		android:layout_marginTop="5dp"/>
    
    <CheckBox
        android:id="@+id/pref1"
        android:layout_below="@+id/button"
        android:text="@string/pref_tracking"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:gravity="center_vertical" />
    
    <CheckBox
        android:id="@+id/pref2"
        android:layout_below="@+id/button"
        android:text="@string/pref_detailed_map"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:gravity="center_vertical" />
    <CheckBox
        android:id="@+id/pref3"
        android:layout_below="@+id/button"
        android:text="@string/pref_facebook_connect"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical" 
        android:layout_marginLeft="30dp"
        />
		
    <TextView
      android:id="@+id/titl2"
      android:layout_below="@+id/button"
      android:text="@string/pref_show_activities"
      android:textSize="22sp"
      android:textColor="@android:color/white"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_marginLeft="10dp" />
    
    <View 
        android:id="@+id/sep2"
		android:layout_width="fill_parent"
		android:layout_height="2dp"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:background="@android:color/white"
		android:layout_marginTop="5dp"/>
    
    <CheckBox
        android:id="@+id/pref4"
        android:layout_below="@+id/button"
        android:text="@string/pref_my_activities"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="30dp"
         />
    <CheckBox
        android:id="@+id/pref5"
        android:layout_below="@+id/button"
        android:text="@string/pref_friends"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical" 
        android:layout_marginLeft="30dp"
        />
    
    
    <CheckBox
        android:id="@+id/pref4"
        android:layout_below="@+id/button"
        android:text="@string/pref_region"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="30dp"
         />
    <CheckBox
        android:id="@+id/pref5"
        android:layout_below="@+id/button"
        android:text="@string/pref_global"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical" 
        android:layout_marginLeft="30dp"
        />
    	</LinearLayout>
    </ScrollView>
</LinearLayout>