<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#444444"
    android:gravity="center_vertical"
    >
	<ImageView  
	    android:id="@+id/logo"
	    android:layout_width="wrap_content" 
	    android:layout_height="80dp"
	    android:src="@drawable/ldiw_logo_white_bg" 
	    android:layout_marginTop="15dp"
	    android:layout_centerHorizontal="true"
	   	/>
	
	<EditText
	    android:id="@+id/edit_text_login"
	    android:layout_width="fill_parent"
		android:layout_height="40dp"
		android:layout_below="@id/logo"
		android:layout_marginTop="10dp"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:textColor="#FFF"
		android:hint="@string/hint_username"
		/>
	
	<EditText
	    android:id="@+id/edit_text_password"
	    android:layout_width="fill_parent"
		android:layout_height="40dp"
		android:layout_below="@id/edit_text_login"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="20dp"
		android:password="true"
		android:textColor="#FFF"
		android:hint="@string/hint_password"
		/>		
		
	<Button 
		android:id="@+id/button_signin"
	    android:layout_width="fill_parent"
		android:layout_height="40dp"
		android:layout_below="@id/edit_text_password"
		android:layout_marginLeft="40dp"
		android:layout_marginRight="40dp"
		android:layout_marginTop="20dp"
		android:text="@string/sign_in"
		android:background="@drawable/button_sign_in"
		android:textColor="@android:color/white"
		android:textStyle="bold"
		android:textSize="18sp"/>
	
	<Button 
		android:id="@+id/button_login_facebook"
	    android:layout_width="fill_parent"
		android:layout_height="40dp"
		android:layout_below="@id/button_signin"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="40dp"
		android:layout_marginBottom="10dp"
		android:layout_marginRight="40dp"
		android:text="@string/login_facebook"
		android:background="@drawable/round_corner_black"
		android:textColor="@color/button_text_color"
		android:textStyle="bold"
		android:textSize="18sp"/>
	
	<Button 
		android:id="@+id/button_register_account"
	    android:layout_width="fill_parent"
		android:layout_height="40dp"
		android:layout_below="@id/button_login_facebook"
		android:layout_marginLeft="40dp"
		android:layout_marginRight="40dp"
		android:layout_marginBottom="20dp"
		android:text="@string/register_account"
		android:background="@drawable/round_corner_black"
		android:textColor="@color/button_text_color"
		android:textStyle="bold"
		android:textSize="18sp"/>
	
	
	
	
</RelativeLayout>
