<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	
    <RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="400dp"
	    android:background="@drawable/ldiw_popup">
	<ImageView
	  android:id="@+id/pop_up_image_badge"
	  android:layout_width="150dp"
	  android:layout_height="150dp"
	  android:layout_marginTop="40dp"
	  android:layout_marginBottom="20dp"
	  android:layout_centerHorizontal="true"
	  android:textColor="#fff"
	  android:src="@drawable/pointmarker_feed"/>
    
	<TextView
	    android:id="@+id/title_popup"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/pop_up_image_badge"
	    android:layout_centerHorizontal="true"
	    android:textColor="#000"
	    android:textSize="23sp"
	    android:layout_marginTop="10dp"
	    android:textStyle="bold"
	    android:text="@string/success"/>
	
	<TextView
	    android:id="@+id/popup_text1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/title_popup"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="10dp"
	    android:textColor="#CCC"
	    android:textSize="18sp"
	    android:textStyle="bold"
	    android:maxLines="4"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:text="@string/success_waste_point_added"/>
	
	<Button 
	    android:id="@+id/button_pop_up_continue"
	    android:layout_width="fill_parent"
	    android:layout_height="50dp"
	    android:text="@string/continue_uc"
	    android:background="@drawable/button_pop_up"
	    android:textColor="#CCC"
	    android:gravity="center"
	    android:textSize="23dp"
	    android:layout_alignParentBottom="true"/>
	
	<View 
	    android:id="@+id/separator"
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="#CCC"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_alignTop="@id/button_pop_up_continue"/>
  
	</RelativeLayout>
</RelativeLayout>
