<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#e5e6e9"
    android:orientation="vertical" >

<ScrollView
  android:layout_height="fill_parent"
  android:layout_width="fill_parent">
  
  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
      
      <TextView 
          android:id="@+id/id_point"
          android:layout_width="fill_parent"
          android:layout_height="20dp"
          android:gravity="center"
          android:textSize="15sp"
          android:textColor="@android:color/black"
          android:textStyle="bold"
          android:text="ID: 7483"/>
      
      
     <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="140dp"
      android:orientation="horizontal"
      android:visibility="visible"
      android:id="@+id/pic_map">
      	<RelativeLayout
        	 android:layout_width="0dp"
	    	 android:layout_height="130dp"  
      	 	 android:layout_weight="1"
      	 	 android:background="#D2D2d3">
      	 
      	 <ProgressBar 
      	     android:layout_width="50dp"
	         android:layout_height="50dp"
			 android:layout_centerInParent="true"
	         android:indeterminate="true"
	         android:id="@+id/progress"
	         />
          
          <ImageView 
		      android:layout_width="fill_parent"
		      android:layout_height="130dp"
		      android:layout_weight="1"
		      android:id="@+id/photo"
		      android:src="@drawable/camera_normal"
		      android:scaleType="centerInside"/>
    	</RelativeLayout>
	    
	    
	    <RelativeLayout
         	android:layout_width="0dp"
      	    android:layout_height="fill_parent"  
      	    android:layout_weight="1">
   			 <com.google.android.gms.maps.MapView
		          android:id="@+id/mapview" 
		          android:layout_width="fill_parent"
		          android:layout_height="130dp"/>
		     
			<!-- hack to fix ugly black artefact with maps v2 -->
	   		 <FrameLayout 
	       		android:layout_width="match_parent"
	        	android:layout_height="140dp" 
	        	android:background="@android:color/transparent" />
	     </RelativeLayout>
     </LinearLayout>
     
     
     <LinearLayout
         android:id="@+id/linear_values"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical">
         
         
         
			
         
     </LinearLayout>
         
     <LinearLayout
	  	android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	    android:background="@drawable/round_corner_grey"
	    android:orientation="vertical"
	    android:layout_marginTop="10dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginBottom="10dp"
	    android:paddingRight="10dp">
	             
	    <TextView 
       	 	android:id="@+id/text_composition_title"
       	  	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
          	android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"/>
		   
		<LinearLayout
		  	android:layout_width="fill_parent"
			android:layout_height="wrap_content"
		    android:background="@drawable/round_corner_grey"
		    android:orientation="horizontal">
	          <RelativeLayout 
				    android:layout_width="0dp"
				    android:layout_weight="1"
				    android:layout_height="match_parent">
    
				<ImageView
				    android:id="@+id/icon_img_plastic"
				    android:layout_width="60dp"
				    android:layout_height="70dp"
				    android:src="@drawable/plastic_things100s"
				    android:layout_marginTop="10dp"/>
				
				<TextView
				    android:layout_marginTop="10dp"
				    android:id="@+id/composition_item_plastic_value"
				    android:layout_width="wrap_content"
				    android:layout_height="35dp"
				    android:layout_toRightOf="@id/icon_img_plastic"
				    android:textSize="28dp"
				    android:textColor="#A7AAAC"
				    android:textStyle="bold"
				    android:text="27%"/>
			    
				
				<TextView
				    android:id="@+id/composition_item_label"
				    android:layout_width="wrap_content"
				    android:layout_height="35dp"
				    android:layout_toRightOf="@id/icon_img_plastic"
				    android:layout_below="@id/composition_item_plastic_value"
				    android:textSize="20dp"
				    android:textColor="#A7AAAC"
				    android:textStyle="bold"
				    android:text="@string/sPmp"/>
				
			</RelativeLayout>

	           <RelativeLayout 
				    android:layout_width="0dp"
				    android:layout_weight="1"
				    android:layout_height="match_parent">
    
				<ImageView
				    android:id="@+id/icon_img_glass"
				    android:layout_width="60dp"
				    android:layout_height="70dp"
				    android:src="@drawable/gbottle100s"
				    android:layout_marginTop="10dp"/>
				
				<TextView
				    
				    android:layout_marginTop="10dp"
				    android:id="@+id/composition_item_glass_value"
				    android:layout_width="wrap_content"
				    android:layout_height="35dp"
				    android:layout_toRightOf="@id/icon_img_glass"
				    android:textSize="28dp"
				    android:textColor="#A7AAAC"
				    android:textStyle="bold"
				    android:text="27%"/>
			    
				
				<TextView
				    android:id="@+id/composition_item_label"
				    android:layout_width="wrap_content"
				    android:layout_height="35dp"
				    android:layout_toRightOf="@id/icon_img_glass"
				    android:layout_below="@id/composition_item_glass_value"
				    android:textSize="20dp"
				    android:textColor="#A7AAAC"
				    android:textStyle="bold"
				    android:text="@string/sGlass"/>
	
			</RelativeLayout>
		</LinearLayout>	
		<LinearLayout
		  	android:layout_width="fill_parent"
			android:layout_height="wrap_content"
		    android:background="@drawable/round_corner_grey"
		    android:orientation="horizontal"
		    android:gravity="center_horizontal">
           
           <RelativeLayout 
			    android:layout_width="0dp"
			    android:layout_weight="1"
			    android:layout_height="match_parent">
   
				<ImageView
				    android:id="@+id/icon_img_paper"
				    android:layout_width="60dp"
				    android:layout_height="70dp"
				    android:src="@drawable/vanapaber"
				    android:layout_marginTop="10dp"/>
				
				<TextView
				    android:layout_marginTop="10dp"
				    android:id="@+id/composition_item_paper_value"
				    android:layout_width="wrap_content"
				    android:layout_height="35dp"
				    android:layout_toRightOf="@id/icon_img_paper"
				    android:textSize="28dp"
				    android:textColor="#A7AAAC"
				    android:textStyle="bold"
				    android:text="27%"/>
			    
				
				<TextView
				    android:id="@+id/composition_item_label"
				    android:layout_width="wrap_content"
				    android:layout_height="35dp"
				    android:layout_toRightOf="@id/icon_img_paper"
				    android:layout_below="@id/composition_item_paper_value"
				    android:textSize="20dp"
				    android:textColor="#A7AAAC"
				    android:textStyle="bold"
				    android:text="@string/sPaper"/>
				
			</RelativeLayout>

           	<RelativeLayout 
			    android:layout_width="0dp"
			    android:layout_weight="1"
			    android:layout_height="match_parent">
   
				<ImageView 
				    android:id="@+id/icon_img_xxl"
				    android:layout_width="60dp"
				    android:layout_height="70dp"
				    android:src="@drawable/xxl"
				    android:layout_marginTop="10dp"/>
				
				<TextView
				    
				    android:layout_marginTop="10dp"
				    android:id="@+id/composition_item_xxl_value"
				    android:layout_width="wrap_content"
				    android:layout_height="35dp"
				    android:layout_toRightOf="@id/icon_img_xxl"
				    android:textSize="28dp"
				    android:textColor="#A7AAAC"
				    android:textStyle="bold"
				    android:text="27%"/>
			    
				
				<TextView
				    android:id="@+id/composition_item_label"
				    android:layout_width="wrap_content"
				    android:layout_height="35dp"
				    android:layout_toRightOf="@id/icon_img_xxl"
				    android:layout_below="@id/composition_item_xxl_value"
				    android:textSize="20dp"
				    android:textColor="#A7AAAC"
				    android:textStyle="bold"
				    android:text="@string/sLarge"/>

			</RelativeLayout>
		</LinearLayout>	    
    </LinearLayout>    
  </LinearLayout>
</ScrollView>


</LinearLayout>